--- a/src/components/ui/Button/Button.module.css
+++ b/src/components/ui/Button/Button.module.css
@@ -1,33 +1,34 @@
 .button {
-  width: 125px;
-  height: 50px;
+  width: 100%;
   font-size: 14px;
   font-weight: 700;
   color: var(--button-text-color);
   border-radius: 18px;
-  border: 1px solid;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
   outline: none;
+  border: none;
   cursor: pointer;
-  transition: background-color 0.4s, transform 0.4s linear;
+  background-color: transparent;
+  /*   background-color: linear-gradient(117deg, rgb(15, 15, 15), rgb(34, 34, 34));
+  transition: background-color 0.4s, transform 0.4s linear; */
 }
 
-.button:hover {
+/* .button:hover {
   background-color: var(--main-button-background-color-hover);
   transform: scale(1.05);
-}
+} */
 
 .colorMain {
   background-color: var(--main-button-background-color);
-  border-color: var(--main-button-background-color);
+  border: 1px solid var(--main-button-background-color);
 }
 
 .colorSecondary {
   background-color: var(--secondary-button-background-color);
-  border-color: var(--secondary-button-background-color);
+  border: 1px solid var(--secondary-button-background-color);
 }
 
 .fullWidth {
