--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,8 @@
   --main-button-background-color-end: #222222;
   --main-button-background-color-active-start: #03a3ed;
   --main-button-background-color-active-end: #0382bd;
-  --secondary-button-background-color: #f83c29;
-  --secondary-button-background-color-hover: #b83020;
+  --secondary-button-background-color-start: #fa5e4c;
+  --secondary-button-background-color-end: #b83020;
   --low-weight-color: #ffc107;
   --normal-weight-color: #8bc34a;
   --overweight-color: #ffa726;
