--- a/src/components/ui/Input/Input.module.css
+++ b/src/components/ui/Input/Input.module.css
@@ -42,3 +42,11 @@ input::-webkit-inner-spin-button {
   font-weight: 600;
   align-self: flex-end;
 }
+
+.error {
+  border-color: var(--error-color);
+}
+
+.error.input::placeholder {
+  color: var(--error-color);
+}
